--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ section {
   flex-direction: column;
 }
 
-form {
+.form {
   width: 100%;
   padding: 25px;
   background-color: #fff;
@@ -41,7 +41,7 @@ input {
   font-size: 20px;
 }
 
-.todos {
+#todos {
   width: 100%;
   padding: 25px;
   background-color: #fff;
@@ -59,9 +59,13 @@ input[type="checkbox"] {
   width: 50px;
 }
 
-.error {
+#error {
   display: none;
   color: tomato;
   line-height: 40px;
   text-align: center;
+}
+
+.finished {
+  text-decoration: line-through;
 }
