--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: aliceblue;
+  background-color: #89abe3ff;
 }
 
 section {
@@ -27,7 +27,7 @@ section {
 .form {
   width: 100%;
   padding: 25px;
-  background-color: #fff;
+  background-color: #fcf6f5ff;
   border-radius: 10px;
   margin-bottom: 50px;
 }
@@ -35,7 +35,7 @@ section {
 input {
   width: 100%;
   border: 0px;
-  background-color: aliceblue;
+  background-color: #fff;
   padding: 20px;
   border-radius: 10px;
   font-size: 20px;
@@ -44,11 +44,16 @@ input {
 #todos {
   width: 100%;
   padding: 25px;
-  background-color: #fff;
+  background-color: #fcf6f5ff;
   border-radius: 10px;
 }
 
+#todo {
+  background-color: #fcf6f5ff;
+}
+
 .todo {
+  background-color: #fcf6f5ff;
   height: 50px;
   display: flex;
   justify-content: space-between;
@@ -68,4 +73,5 @@ input[type="checkbox"] {
 
 .finished {
   text-decoration: line-through;
+  color: red;
 }
